--- a/styles/main.css
+++ b/styles/main.css
@@ -128,8 +128,8 @@ textarea {
     position: absolute;
     height: 16px;
     width: 16px;
-    top: 40px;
-    left: 280px;
+    top: 55px;
+    right: 45px;
     background-image: url(../images/cross.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -143,7 +143,7 @@ textarea {
       top: 0; }
   @media screen and (max-width: 1102px) {
     .nav {
-      width: 320px;
+      width: 100%;
       height: 568px;
       background-color: #0075ff;
       -webkit-box-orient: vertical;
@@ -156,12 +156,16 @@ textarea {
       -webkit-transition: top 1s;
       transition: top 1s; }
       .nav:after {
-        content: url("../images/logo.svg");
+        content: "";
+        background-image: url("../images/logo.png");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
         width: 73px;
         height: 48px;
         position: absolute;
         top: 24px;
-        left: 124px; } }
+        left: calc(50% - 36px); } }
   .nav__list {
     width: 100%;
     display: -webkit-box;
@@ -271,18 +275,18 @@ textarea {
       -webkit-box-align: center;
           -ms-flex-align: center;
               align-items: center; } }
-  .title-block__title1 {
+  .title-block__title-big {
     font-size: 48px;
     line-height: 48px;
     font-weight: bold;
     width: 50%;
     margin: 0; }
     @media screen and (max-width: 1102px) {
-      .title-block__title1 {
+      .title-block__title-big {
         width: 100%;
         font-size: 36px;
         line-height: 36px; } }
-  .title-block__title2 {
+  .title-block__title-small {
     font-size: 24px;
     line-height: 30px;
     color: #0075ff; }
@@ -385,7 +389,10 @@ textarea {
   line-height: 56px;
   font-weight: bold;
   border: 2px solid #0075ff;
-  border-radius: 8px; }
+  border-radius: 8px;
+  outline: none; }
+  .button:focus {
+    border: 2px solid red; }
 
 .form {
   display: -webkit-box;
@@ -467,19 +474,19 @@ textarea {
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center; } }
-  .consultation__title1 {
+  .consultation__title-big {
     position: relative;
     margin: 93px;
     font-size: 48px;
     line-height: 48px;
     font-weight: bold; }
     @media screen and (max-width: 1102px) {
-      .consultation__title1 {
+      .consultation__title-big {
         margin-top: 64px;
         margin-bottom: 53px;
         font-size: 36px;
         line-height: 36px; } }
-    .consultation__title1:after {
+    .consultation__title-big:after {
       content: "";
       background-image: url(../images/Shape.png);
       background-position: center;
@@ -490,7 +497,7 @@ textarea {
       position: absolute;
       bottom: -16px;
       left: calc(50% - 11px); }
-  .consultation__title2 {
+  .consultation__title-small {
     font-size: 24px;
     font-weight: bold;
     color: #0075ff; }
@@ -648,14 +655,14 @@ textarea {
         -webkit-box-align: start;
             -ms-flex-align: start;
                 align-items: flex-start; } }
-  .contact__title1 {
+  .contact__title {
     position: relative;
     font-size: 48px;
     font-weight: bold;
     line-height: 48px;
     margin-top: 152px;
     margin-bottom: 93px; }
-    .contact__title1:after {
+    .contact__title:after {
       content: "";
       background-image: url(../images/Shape.png);
       background-position: center;
@@ -667,7 +674,7 @@ textarea {
       bottom: -16px;
       left: calc(50% - 11px); }
     @media screen and (max-width: 1102px) {
-      .contact__title1 {
+      .contact__title {
         margin-top: 64px;
         margin-bottom: 53px;
         font-size: 36px;
