--- a/styles/main.css
+++ b/styles/main.css
@@ -116,7 +116,7 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: fixed;
+  position: absolute;
   top: 620px;
   left: 0;
   right: 0;
@@ -144,6 +144,7 @@ textarea {
       top: 0; }
   @media screen and (max-width: 1102px) {
     .nav {
+      position: fixed;
       width: 100%;
       height: 568px;
       background-color: #0075ff;
@@ -237,6 +238,10 @@ textarea {
   height: 76px; }
 
 .footer {
+  position: -webkit-sticky;
+  position: sticky;
+  z-index: -1;
+  bottom: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -345,14 +350,30 @@ textarea {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: calc(50% - 10px); }
+    width: calc(50% - 10px);
+    -webkit-transition: width 2s, -webkit-transform 2s;
+    transition: width 2s, -webkit-transform 2s;
+    transition: transform 2s, width 2s;
+    transition: transform 2s, width 2s, -webkit-transform 2s; }
+    @media screen and (max-width: 1102px) {
+      .gallery__photo:hover {
+        width: 50%;
+        -webkit-transform: scale(2);
+                transform: scale(2); } }
+    .gallery__photo--left {
+      -webkit-transform-origin: left;
+              transform-origin: left; }
+      .gallery__photo--left:hover {
+        z-index: 2; }
+    .gallery__photo--right {
+      -webkit-transform-origin: right;
+              transform-origin: right; }
     @media screen and (max-width: 1102px) {
       .gallery__photo {
         height: 131px; } }
     @media screen and (min-width: 1102px) {
       .gallery__photo--big {
-        width: calc(67% - 10px);
-        background-image: url(); } }
+        width: calc(67% - 10px); } }
     @media screen and (min-width: 1102px) {
       .gallery__photo--small {
         width: calc(33% - 10px); } }
@@ -392,8 +413,6 @@ textarea {
   border: 2px solid #0075ff;
   border-radius: 8px;
   outline: none; }
-  .button:focus {
-    border: 2px solid red; }
 
 .form {
   display: -webkit-box;
@@ -691,12 +710,11 @@ textarea {
 html * {
   outline: none; }
   html *:focus {
-    background-color: #f8d3d8; }
-
-body {
-  background: white; }
+    -webkit-box-shadow: 0 0 10px 5px #3c94f8;
+            box-shadow: 0 0 10px 5px #3c94f8; }
 
 .main {
+  background: white;
   padding: 104px 120px;
   max-width: 1102px;
   margin: 0 auto; }
